@@ -1,4 +1,5 @@
 import java.sql.*;
+import java.util.ArrayList;
 
 public class DBController {
     private static final String URL="jdbc:oracle:thin:@aloe.cs.arizona.edu:1521:oracle";
@@ -14,7 +15,6 @@ public class DBController {
     }
 
     //UNIQUE ID getter using sequences for each tablename
-
     private int getNextId(String table,String owner) throws SQLException {
         String seq=table.toUpperCase() + "_SEQ";
         String sql="select " + owner + "." + seq + ".NEXTVAL FROM DUAL";
@@ -30,14 +30,21 @@ public class DBController {
     public int addMember(String name,String phone,String email,String dob,String emergency) throws SQLException {
         int id=getNextId("Member","mandyjiang");
         String sql="insert into mandyjiang.Member(member_id,name,phone,email,date_of_birth,emergency_contact) VALUES(?,?,?,?,?,?)";
-        try (PreparedStatement p=dbconn.prepareStatement(sql)) {
-            p.setInt(1,id);
-            p.setString(2,name);
-            p.setString(3,phone);
-            p.setString(4,email);
-            p.setDate(5,dob == null || dob.isBlank() ? null : Date.valueOf(dob));
-            p.setString(6,emergency);
-            p.executeUpdate();
+        try (PreparedStatement stmt=dbconn.prepareStatement(sql)) {
+            stmt.setInt(1,id);
+            stmt.setString(2,name);
+            stmt.setString(3,phone);
+            stmt.setString(4,email);
+            Date dobDate;
+                if (dob ==null ||dob.trim().isEmpty()) {
+                    dobDate =null;
+                } else {
+                    dobDate = Date.valueOf(dob);
+                }
+
+            stmt.setDate(5, dobDate);
+            stmt.setString(6,emergency);
+            stmt.executeUpdate();
             
         }
         return id;
@@ -45,12 +52,12 @@ public class DBController {
 
     public void updateMember(int id,String phone,String email,String emergency) throws SQLException {
         String sql="update mandyjiang.Member SET phone=COALESCE(?,phone),email=COALESCE(?,email),emergency_contact=COALESCE(?,emergency_contact) where member_id=?";
-        try (PreparedStatement p=dbconn.prepareStatement(sql)) {
-            p.setString(1,phone);
-            p.setString(2,email);
-            p.setString(3,emergency);
-            p.setInt(4,id);
-            int updated=p.executeUpdate();
+        try (PreparedStatement stmt=dbconn.prepareStatement(sql)) {
+            stmt.setString(1,phone);
+            stmt.setString(2,email);
+            stmt.setString(3,emergency);
+            stmt.setInt(4,id);
+            int updated=stmt.executeUpdate();
             if (updated == 0) {
                 throw new SQLException("No member with ID " + id);
             }
@@ -59,44 +66,49 @@ public class DBController {
     }
 
     public boolean deleteMember(int id) throws SQLException {
-        // 1. Check for active ski passes
-        String checkPass=
-          "select 1 from mandyjiang.SkiPass " +
-          "where member_id=? AND (remaining_uses>0 OR expiration_date > SYSTIMESTAMP)";
-        try (PreparedStatement cp=dbconn.prepareStatement(checkPass)) {
-            cp.setInt(1,id);
-            if (cp.executeQuery().next()) {
-                throw new IllegalStateException("Cannot delete member: active ski passes exist.");
+         // refuse deletion if remaining_uses > 0 or expiration_date > now
+        String checkPass= "select * from mandyjiang.SkiPass " +
+          "where member_id=? and  (remaining_uses>0 OR expiration_date > SYSTIMESTAMP)";
+            try (PreparedStatement cp_stmt=dbconn.prepareStatement(checkPass)) {
+                cp_stmt.setInt(1,id);
+                if (cp_stmt.executeQuery().next()) {
+                    throw new IllegalStateException("Member can't be deleted: active ski passes exist.");
+                }
             }
-        }
-    
-        // // 2. Check for open equipment rentals update tables names later
-        // String checkRental="select * from Rental where member_id=? AND return_status='OUT'";
-        // try (PreparedStatement cr=dbconn.prepareStatement(checkRental)) {
-        //     cr.setInt(1,id);
-        //     if (cr.executeQuery().next()) {
-        //         throw new IllegalStateException("Cannot delete member: open equipment rentals exist.");
-        //     }
-        // }
-    
-        // // 3. Check for unused lesson sessions
-        // String checkLesson="select * from LessonPurchase where member_id=? AND remaining_sessions>0";
-        // try (PreparedStatement cl=dbconn.prepareStatement(checkLesson)) {
-        //     cl.setInt(1,id);
-        //     if (cl.executeQuery().next()) {
-        //         throw new IllegalStateException("Cannot delete member: unused lesson sessions exist.");
-        //     }
-        // }
-    
-    
+         // refuse if any unreturned rental is still out
+        String checkRental ="select * from tylergarfield.Rental " + "where skiPassID in (select pass_id from mandyjiang.SkiPass where member_id = ?) " +
+        "and returnStatus = 1" ;
+            try (PreparedStatement ch_rental = dbconn.prepareStatement(checkRental)) {
+                ch_rental.setInt(1, id);
+                if (ch_rental.executeQuery().next()) {
+                    throw new IllegalStateException("Member can't be deleted: open equipment rentals exist.");
+                }
+            }
+        // check for unused lessons
+        String checkLesson =
+        "select * from jeffreylayton.LessonPurchase " + "where member_id = ? and  remaining_sessions > 0";
+            try (PreparedStatement cl_lesson = dbconn.prepareStatement(checkLesson)) {
+                cl_lesson.setInt(1, id);
+                if (cl_lesson.executeQuery().next()) {
+                    throw new IllegalStateException("Member can't be deleted: unused lesson sessions exist.");
+                }
+            }
+        //delete the rentals history
+        String delArchRentals =
+        "delete from tylergarfield.Rental_Archive where skiPassID in ( " +
+        "  select pass_id FROM mandyjiang.SkiPass WHERE member_id = ?)";
+            try (PreparedStatement ps = dbconn.prepareStatement(delArchRentals)) {
+                ps.setInt(1, id);
+                ps.executeUpdate();
+            }
 
-        //  Delete member
-        try (PreparedStatement dm=dbconn.prepareStatement(
-                 "DELETE from mandyjiang.Member where member_id=?"
-             )) {
-            dm.setInt(1,id);
-            return dm.executeUpdate() == 1;
-        }
+        //  dekete  member
+            try (PreparedStatement dm=dbconn.prepareStatement(
+                    "DELETE from mandyjiang.Member where member_id=?"
+                )) {
+                dm.setInt(1,id);
+                return dm.executeUpdate() == 1;
+            }
     }
 
     //  Ski Pass
@@ -106,9 +118,7 @@ public class DBController {
 
         int defaultUses;
         double defaultPrice;
-        String lookupSql=""" 
-        SELECT total_uses,price from mandyjiang.PassType where type=?
-        """;
+        String lookupSql="select  total_uses,price from mandyjiang.PassType where type=?";
         try (PreparedStatement lookup=dbconn.prepareStatement(lookupSql)) {
             lookup.setString(1,type);
             try (ResultSet rs=lookup.executeQuery()) {
@@ -121,17 +131,14 @@ public class DBController {
         }
         System.out.printf("FYI: That %s pass costs $%.2f and grants %d uses.%n",type,defaultPrice,defaultUses);
 
-        String insertsql="""
-        Insert into mandyjiang.SkiPass(pass_id,member_id,type,remaining_uses,purchase_time,expiration_date) 
-        VALUES(?,?,?,?,SYSTIMESTAMP,?)
-        """;
-        try (PreparedStatement p=dbconn.prepareStatement(insertsql)) {
-            p.setInt(1,id);
-            p.setInt(2,mid);
-            p.setString(3,type);
-            p.setInt(4,defaultUses);
-            p.setDate(5,Date.valueOf(exp));
-            p.executeUpdate();
+        String insertsql="Insert into mandyjiang.SkiPass(pass_id,member_id,type,remaining_uses,purchase_time,expiration_date) VALUES(?,?,?,?,SYSTIMESTAMP,?)";
+        try (PreparedStatement stmt=dbconn.prepareStatement(insertsql)) {
+            stmt.setInt(1,id);
+            stmt.setInt(2,mid);
+            stmt.setString(3,type);
+            stmt.setInt(4,defaultUses);
+            stmt.setDate(5,Date.valueOf(exp));
+            stmt.executeUpdate();
         }
 
         return id;
@@ -140,10 +147,10 @@ public class DBController {
 
     public void adjustPassUses(int pid,int uses) throws SQLException {
         String sql="update mandyjiang.SkiPass SET remaining_uses=? where pass_id=?";
-        try (PreparedStatement p =dbconn.prepareStatement(sql)) {
-            p.setInt(1,uses);
-            p.setInt(2,pid);
-            int updated=p.executeUpdate();
+        try (PreparedStatement stmt=dbconn.prepareStatement(sql)) {
+            stmt.setInt(1,uses);
+            stmt.setInt(2,pid);
+            int updated=stmt.executeUpdate();
             if (updated == 0) {
                 throw new SQLException("No ski pass exist with ID " +pid);
             }
@@ -152,7 +159,7 @@ public class DBController {
     }
 
     public boolean deletePass(int pid) throws SQLException {
-        // 1. Check that the pass exists and is expired/used up
+        // check that the pass exists and is expired/used up
         try (PreparedStatement chk=dbconn.prepareStatement("select remaining_uses,expiration_date from mandyjiang.SkiPass where pass_id=?")) {
             chk.setInt(1,pid);
             try (ResultSet rs=chk.executeQuery()) {
@@ -164,10 +171,22 @@ public class DBController {
                     );
             }
         }
+        // check if any live rental is still out
+        String checkRental =
+            "select *   from tylergarfield.Rental " +
+            " where skiPassID = ? and returnStatus = 0";
+            try (PreparedStatement stmt = dbconn.prepareStatement(checkRental)) {
+                stmt.setInt(1, pid);
+                if (stmt.executeQuery().next()) {
+                    throw new IllegalStateException(
+                        "Cannot delete pass: there are unreturned equipment rentals."
+                    );
+            }
+        }
     
-        // 2. Archive / delete 
+        // Now, Archive / delete 
         String archiveSql="""
-            INSERT INTO mandyjiang.SkiPass_Archive(
+            insert into mandyjiang.SkiPass_Archive(
             SPARCHIVE_ID,PASS_ID,MEMBER_ID,TYPE,
             REMAINING_USES,PURCHASE_TIME,EXPIRATION_DATE,ARCHIVED_TIME)
             select mandyjiang.SKIPASS_ARCHIVE_SEQ.NEXTVAL,
@@ -221,6 +240,61 @@ public class DBController {
         return left;
     }
 
+
+    public void getIntermediateTrails() throws SQLException {
+        String sql = """
+        select t.trail_name, t.difficulty, t.category, l.lift_name
+        from mandyjiang.Trail t
+        join mandyjiang.LiftTrail lt 
+          on lt.trail_name = t.trail_name
+        join mandyjiang.Lift l
+          on l.lift_name = lt.lift_name
+        where (t.difficulty = 'INTERMEDIATE' or t.difficulty = 'BEGINNER') 
+          and t.status = 'OPEN' 
+          and l.status = 'OPEN'
+        order by t.trail_name
+        """;
+
+        try (PreparedStatement p = dbconn.prepareStatement(sql)) {
+            System.err.println("tigkajs;f");
+            try (ResultSet rs = p.executeQuery()) {
+                String trail = "";
+                String category = "";
+                String difficulty = "";
+                ArrayList lifts = new ArrayList<String>();
+
+                while (rs.next()) {
+                    String newTrail = rs.getString("trail_name");
+                    // Only print trail data once all lifts have been given
+                    if (trail.length() != 0 && trail.compareTo(newTrail) != 0) {
+                        System.out.println("Trail: " + trail);
+                        System.out.println("  Difficulty:\t" + difficulty);
+                        System.out.println("  Category:\t" + category);
+                        System.out.println("  Open Lifts:");
+                        if (lifts.size() > 0) {
+                            for (int i = 0; i < lifts.size(); i++) {
+                                System.out.println("\t" + lifts.get(i));
+                            }
+                        } else {
+                            System.out.println("\tNone.");
+                        }
+
+                        lifts = new ArrayList<String>();
+                    } else {
+                        category = rs.getString("category");
+                        difficulty = rs.getString("difficulty");
+                        String newLift = rs.getString("lift_name");
+                        if (lifts.indexOf(newLift) != -1) {
+                            lifts.add(newLift);
+                        }
+                    }
+
+                    trail = newTrail;
+                }            
+            }
+        }
+    }
+
     // TODO implement these.
     // public int addRentalRecord(int skiPassID, int equipmentID) {
     // }
@@ -239,15 +313,15 @@ public class DBController {
 
     // Lesson + Lesson Purchase
     public int addLessonPurchase(int mid, int lid, int totalSessions, int remaining) throws SQLException {
-        int id = getNextId("LessonPurchase", "jeffreylayton");
+        int id = getNextId("jLessonPurchasej", "jeffreylayton");
         String sql = "insert into jeffreylayton.LessonPurchase(order_id, member_id, lesson_id, total_sessions, remaining_sessions) values (?, ?, ?, ?, ?)"; 
-        try (PreparedStatement p = dbconn.prepareStatement(sql)) {
-            p.setInt(1, id);
-            p.setInt(2, mid);
-            p.setInt(3, lid);
-            p.setInt(4, totalSessions);
-            p.setInt(5, remaining);
-            p.executeUpdate();
+        try (PreparedStatement stmt= dbconn.prepareStatement(sql)) {
+            stmt.setInt(1, id);
+            stmt.setInt(2, mid);
+            stmt.setInt(3, lid);
+            stmt.setInt(4, totalSessions);
+            stmt.setInt(5, remaining);
+            stmt.executeUpdate();
         }
 
         return id;
@@ -255,13 +329,442 @@ public class DBController {
 
     public void adjustLessonPurchase(int oid, int remaining) throws SQLException {
         String sql = "update jeffreylayton.LessonPurchase set remaining_sessions=? where order_id=?";
-        try (PreparedStatement p = dbconn.prepareStatement(sql)) {
-            p.setInt(1, remaining);
-            p.setInt(2, oid);
-            int updated = p.executeUpdate();
+        try (PreparedStatement stmt = dbconn.prepareStatement(sql)) {
+            stmt.setInt(1, remaining);
+            stmt.setInt(2, oid);
+            int updated = stmt.executeUpdate();
             if (updated == 0){
                 throw new SQLException("No order with ID " + oid);
             }
         }
     }
+
+    public boolean deleteLessonPurchase(int oid) throws SQLException {
+        String checkSql = "select remaining_sessions from jeffreyLayton.LessonPurchase where order_id = ?";
+        try (PreparedStatement c = dbconn.prepareStatement(checkSql)) {
+            c.setInt(1, oid);
+            try (ResultSet rs =  c.executeQuery()) {
+                if (!rs.next()) {
+                    throw new IllegalStateException("Lesson Purchase does not exist");
+                } else {
+                    int sessions = rs.getInt("remaining_sessions");
+                    if (sessions > 0) {
+                    throw new IllegalStateException("Lesson Purchase contains remaining sessions");
+                    }
+                }
+            }
+        }
+
+
+        String archiveSql = """
+        insert into jeffreylayton.LessonPurchase_Archive (
+            order_id, member_id, lesson_id, total_sessions, remaining_sessions
+        )
+        select order_id, member_id, lesson_id, total_sessions, remaining_sessions
+        from jeffreylayton.LessonPurchase
+        where order_id = ?
+        """;
+
+        try (PreparedStatement a = dbconn.prepareStatement(archiveSql)) {
+            a.setInt(1, oid);
+            a.executeUpdate();
+        }
+
+        String deleteSql = "delete from jeffreylayton.LessonPurchase where order_id=?";
+
+        try (PreparedStatement d = dbconn.prepareStatement(deleteSql)) {
+            d.setInt(1, oid);
+            return d.executeUpdate() == 1;
+        }
+
+    }
+
+    public void getLessonsForMember(int mid) throws SQLException {
+        String sql = """
+        select l.lesson_id, e.name as "instructor_name", l.time, sum(lp.total_sessions) as "total_sessions", sum(lp.remaining_sessions) as "remaining_sessions"
+        from jeffreylayton.LessonPurchase lp
+        join jeffreylayton.Lesson l on l.lesson_id = lp.lesson_id
+        join jeffreylayton.Employee e on e.employee_id = l.instructor_id
+        where lp.member_id=?
+        group by l.lesson_id, e.name, l.time
+        """;
+        
+        try (PreparedStatement p = dbconn.prepareStatement(sql)) {
+            p.setInt(1, mid);
+            try (ResultSet rs = p.executeQuery()) {
+                while (rs.next()) {
+                    String instructorName = rs.getString("instructor_name");
+                    Date lessonTime = rs.getDate("time");
+                    int totalSessions = rs.getInt("total_sessions");
+                    int remainingSessions = rs.getInt("remaining_sessions");
+
+                    System.out.println("Lesson: ");
+                    System.out.println("  Instructor:\t\t"       + instructorName);
+                    System.out.println("  Time:\t\t\t"           + lessonTime);
+                    System.out.println("  Purchased Sessions:\t" + String.valueOf(totalSessions));
+                    System.out.println("  Remaining Sessions:\t" + String.valueOf(remainingSessions));
+                    System.out.println();
+                }
+            }
+        }
+    }
+
+    // TODO implement these.
+    public int addRentalRecord(int skiPassID, int equipmentID) throws SQLException,IllegalStateException{
+	Statement myStmt = dbconn.createStatement();
+	// First thing we need to do is determine if the given ski pass id is actually a valid
+	// active ski pass the foreign key constraint on equipmentID will take care of that check.
+	String checkSkiPassValid = "select 1 from mandyjiang.SkiPass where pass_id=%d";
+	checkSkiPassValid = String.format(checkSkiPassValid,skiPassID);
+	ResultSet res = myStmt.executeQuery(checkSkiPassValid);
+
+        // Check the result to determine if there is a entry with the ski pass.
+        if(!res.next()) {myStmt.close();throw new SQLException("Given pass id was not in ski pass table!");}
+ 
+	// Next verify that there are no unreturned rental currently with the same equipmentID.
+        String check_active_rental = "select 1 from tylergarfield.Rental where equipmentID=%d and returnStatus=0";
+	check_active_rental = String.format(check_active_rental,equipmentID);
+	ResultSet res2 = myStmt.executeQuery(check_active_rental);
+	if(res2.next()) { myStmt.close(); throw new IllegalStateException("Tried to rent equipment that has not yet been returned!");}
+
+
+        // Now that we have verified that the skiPassId is valid and the equipment is not already being rented.
+ 	//  we can actually attempt to insert the new record.
+        int rentalID = getNextId("Rental","tylergarfield");
+        String insert_query = "insert into tylergarfield.Rental values(%d,%d,%d,SYSTIMESTAMP,0)";
+	insert_query = String.format(insert_query,rentalID,skiPassID,equipmentID);
+        int numRowsAffected = myStmt.executeUpdate(insert_query);
+
+
+
+        if(numRowsAffected > 0) {
+            // Next create a new entrie in the log table with the previous state.
+           // Now actually add a new archive entry for logging changes.
+            int rentalArchiveID = getNextId("Rental_Archive","tylergarfield");
+            String insertIntoLog = "insert into tylergarfield.Rental_Archive " +
+                               " select %d,rentalID,skiPassID,equipmentID,rentalTime,returnStatus,SYSTIMESTAMP,0 " +
+                               " from tylergarfield.Rental where rentalID=%d";
+            insertIntoLog = String.format(insertIntoLog,rentalArchiveID,rentalID);
+            myStmt.executeUpdate(insertIntoLog);
+        } else { rentalID = -1;}
+
+        myStmt.close();
+        return rentalID;
+    }
+    
+    // TODO add function here to modify rental time here!!!!!!
+    public int updateRentalTime(int rentalID) throws SQLException{
+        Statement myStmt = dbconn.createStatement();
+        // First verify that the given rentalID is in the Rental relation.
+        String check_rental_id = "select 1 from tylergarfield.Rental where rentalID=%d";
+        check_rental_id = String.format(check_rental_id, rentalID);
+        ResultSet res = myStmt.executeQuery(check_rental_id);
+        if(!res.next()) {myStmt.close(); throw new SQLException("The given rentalID does not exist!");}
+
+        // Next update the rental time.
+        String updateRentTime = "update tylergarfield.Rental set rentalTime=SYSTIMESTAMP where rentalID=%d";
+        updateRentTime = String.format(updateRentTime,rentalID);
+        int numRowsUpdated = myStmt.executeUpdate(updateRentTime);
+
+        int rentalArchiveID = 0;
+
+        if(numRowsUpdated > 0) {
+         // Next create a new entrie in the log table with the previous state.
+        // Now actually add a new archive entry for logging changes.
+            rentalArchiveID = getNextId("Rental_Archive","tylergarfield");
+            String insertIntoLog = "insert into tylergarfield.Rental_Archive " +
+                               " select %d,rentalID,skiPassID,equipmentID,rentalTime,returnStatus,SYSTIMESTAMP,1 " +
+                               " from tylergarfield.Rental where rentalID=%d";
+            insertIntoLog = String.format(insertIntoLog,rentalArchiveID,rentalID);
+            myStmt.executeUpdate(insertIntoLog);
+        }
+
+        myStmt.close();
+        return rentalArchiveID;
+    }
+
+    // Function returns 1 for a normal error and 2 if the givne rentalID does not exist.
+    public int returnEquipment(int rentalID) throws SQLException,IllegalStateException{
+        Statement myStmt = dbconn.createStatement();
+        // First verify that the given rentalID is in the Rental relation.
+        String check_rental_id = "select 1 from tylergarfield.Rental where rentalID=%d";
+        check_rental_id = String.format(check_rental_id, rentalID);
+        ResultSet res = myStmt.executeQuery(check_rental_id);
+        if(!res.next()) {myStmt.close(); throw new SQLException("The given rentalID does not exist!");}
+
+        // Check that the rental had not already been returned.
+        String checkRentalRet = "select returnStatus from tylergarfield.Rental where rentalID=%d";
+        checkRentalRet = String.format(checkRentalRet,rentalID);
+        res = myStmt.executeQuery(checkRentalRet);
+        int retStat = 0;
+        if(res.next()){retStat = res.getInt("returnStatus");}
+        if(retStat == 1){myStmt.close();throw new IllegalStateException("Attempted to return equipment that was already returned!");}
+
+        // Now that we have verified that the entry exists, the next thing to do is to actually update the
+        // equipments returnStatus.
+        String updateRent = "update tylergarfield.Rental set returnStatus=1 where rentalID=%d";
+        updateRent = String.format(updateRent,rentalID);
+        int numRowsUpdated = myStmt.executeUpdate(updateRent);
+
+        int rentalArchiveID = 0;
+
+        if(numRowsUpdated > 0) {
+         // Next create a new entrie in the log table with the previous state.
+        // Now actually add a new archive entry for logging changes.
+            rentalArchiveID = getNextId("Rental_Archive","tylergarfield");
+            String insertIntoLog = "insert into tylergarfield.Rental_Archive " +
+                               " select %d,rentalID,skiPassID,equipmentID,rentalTime,returnStatus,SYSTIMESTAMP,1 " +
+                               " from tylergarfield.Rental where rentalID=%d";
+            insertIntoLog = String.format(insertIntoLog,rentalArchiveID,rentalID);
+            myStmt.executeUpdate(insertIntoLog);
+        }
+
+	myStmt.close();
+        return rentalArchiveID;
+    }
+
+    public int deleteRentalRecord(int rentalID) throws SQLException,IllegalStateException{
+        Statement myStmt = dbconn.createStatement();
+        // First verify that the given rentalID is in the Rental relation.
+        String checkRentalId = "select 1 from tylergarfield.Rental where rentalID=%d";
+        checkRentalId = String.format(checkRentalId, rentalID);
+        ResultSet res = myStmt.executeQuery(checkRentalId);
+        if(!res.next()) {myStmt.close();throw new SQLException("Given rentalID was not present in the rental records!");}
+
+        // We will check if the equipment " the record was created and the equipment has been used " by checking if the only
+        // logged even is the record being created.
+        String checkBeenUsed = "select changeState from tylergarfield.Equipment_Archive where rentalID=%d";
+        checkBeenUsed = String.format(checkBeenUsed,rentalID);
+        res = myStmt.executeQuery(checkBeenUsed);
+        int onlyAdded = 1;
+        if(res!=null) {
+            while(res.next()) {
+                if(res.getInt("changeState")!=0){onlyAdded=0;}
+            }
+        }
+
+
+        if(onlyAdded == 0) {
+            // Before deleting or archiving the rental record also verify that the renetal has a return status of 1.
+            String checkRentalReturned = "select returnStatus from tylergarfield.Rental where rentalID=%d";
+            checkRentalReturned = String.format(checkRentalReturned,rentalID);
+            res = myStmt.executeQuery(checkRentalReturned);
+            int rentRetStat = 0;
+            if(res.next()) {rentRetStat=res.getInt("returnStatus");}
+
+            if(rentRetStat == 0) {myStmt.close();throw new IllegalStateException("Attempted to delete a active rental, return your equipment first!");}
+        }
+        // Now that we have verified that the rented equipment is no longer in use the next thing to do
+        // is to actually archive the record and delete it.
+        int rentalArchiveID = getNextId("Rental_Archive","tylergarfield");
+        String addRentalToArchive = "insert into tylergarfield.Rental_Archive " +
+                                    "select %d,rentalID,skiPassID,equipmentID,rentalTime,returnStatus,SYSTIMESTAMP,2 " +
+                                    "from tylergarfield.Rental " +
+                                    "where rentalID=%d";
+        addRentalToArchive = String.format(addRentalToArchive,rentalArchiveID,rentalID);
+        myStmt.executeUpdate(addRentalToArchive);
+
+        // Now that that is done we can delete the rental record from the main Rental relation.
+        String deleteRental = "delete from tylergarfield.Rental where rentalID=%d";
+        deleteRental = String.format(deleteRental,rentalID);
+        int numRowsDeleted = myStmt.executeUpdate(deleteRental);
+
+        myStmt.close();
+
+        return numRowsDeleted;
+
+
+    }
+
+    public int addEquipmentRecord(String type, double size, String name) throws SQLException,IllegalStateException{
+        Statement myStmt = dbconn.createStatement();
+
+        // Now check if the given size is valid for the given equipment type. Caller needs to verify that the
+        // number given is either x.0 or x.5 for boots or x.0 for any other gear type. Rental gear will just have.
+        // TODO you were here ACTUALLY FILL IN THESE CHECKS.
+        if(type.equals("boot") && (size < 4.0 || size > 14.0)) {
+            myStmt.close();
+            throw new IllegalStateException("Given boot for equipment but size was not within valid range!");
+        } else if(type.equals("pole") && (size < 100.0 || size > 140.0)){
+            myStmt.close();
+            throw new IllegalStateException("Given pole for equipment update but size was not within valid range!");
+        } else if(type.equals("alpine ski") && (size < 115.0 || size > 200.0)){
+            myStmt.close();
+            throw new IllegalStateException("Given alpine ski for equipment update but size was not within valid range!");
+        } else if(type.equals("snowboard") && (size < 90.0 || size > 178.0)){
+             myStmt.close();
+             throw new IllegalStateException("Given snowboard ski for equipment update but size was not within valid range!");
+        } else if(type.equals("helmet") || type.equals("goggle") || type.equals("glove")) {
+            if(size < 1.0 || size > 3.0) {
+                myStmt.close();
+                throw new IllegalStateException("Given "+type +" for equipment update but size was not within valid range!");
+            }
+        }
+
+
+        // Next we will get the next equipment id.
+        int equipmentID = getNextId("Equipment","tylergarfield");
+        // Now actually add the new entry to the relaton.
+        String addToTable = "insert into tylergarfield.Equipment  values(%d,%s,%f,%s)";
+        addToTable = String.format(addToTable,equipmentID,type,size,name);
+        // Now execute the query.
+        int numRowsAffected = myStmt.executeUpdate(addToTable);
+
+        if(numRowsAffected > 0) {
+        // Next log the equipment adition in the archive table.
+            int equipmentArchiveID = getNextId("Equipment_Archive","tylergarfield");
+            String addEquipmentToArchive = "insert into tylergarfield.Equipment_Archive " +
+					"select %d,equipmentID,equip_type,equip_size,name,0 " +
+					"from tylergarfield.Equipment where equipmentID=%d";
+            addEquipmentToArchive = String.format(addEquipmentToArchive,equipmentArchiveID,equipmentID);
+            myStmt.executeQuery(addEquipmentToArchive);
+        } else {equipmentID=-1;}
+        myStmt.close();
+        return equipmentID;
+    }
+
+    public int deleteEquipmentRecord(int equipmentID) throws SQLException{
+        Statement myStmt = dbconn.createStatement();
+
+        // // First check that the given equipmentID actually exists in the Equipment table.
+        String checkEQID = "select 1 from tylergarfield.Equipment where equipmentID=%d";
+        checkEQID = String.format(checkEQID,equipmentID);
+        ResultSet res = myStmt.executeQuery(checkEQID);
+        if(!res.next()){myStmt.close();throw new SQLException("A record with the given equipmentID could not be found!");}
+
+        // Next check if the given piece of equipment is currently being rented at all all.
+        String checkRentedOut = "select 1 from tylergarfield.Rental where equipmentID=%d";
+        checkRentedOut = String.format(checkRentedOut,equipmentID);
+        res = myStmt.executeQuery(checkRentedOut);
+        if(res.next()){myStmt.close();throw new SQLException("Equipment is currently rented!");}
+
+        // Now put the equipment delition in the log table.
+        int equipmentArchiveID = getNextId("Equipment_Archive","tylergarfield");
+        String addEquipmentToArchive = "insert into tylergarfield.Equipment_Archive " +
+                                        "select %d,equipmentID,equip_type,equip_size,name,2 " +
+                                        "from tylergarfield.Equipment where equipmentID=%d";
+        addEquipmentToArchive = String.format(addEquipmentToArchive,equipmentArchiveID,equipmentID);
+        myStmt.executeUpdate(addEquipmentToArchive);
+
+        // Finally remove the equipment from the equipment table.
+        String removeQuery = "delete from tylergarfield.Equipment where equipmentID=%d";
+        removeQuery = String.format(removeQuery,equipmentID);
+        int numRowsAffected = myStmt.executeUpdate(removeQuery);
+        myStmt.close();
+        return numRowsAffected;
+    }
+
+    public int updateEquipmentType(int equipmentID,String newType) throws SQLException{
+        Statement myStmt = dbconn.createStatement();
+
+        // First verify that the equipment that is attempting to be added updated actually exists.
+        String checkEQID = "select 1 from tylergarfield.Equipment where equipmentID=%d";
+        checkEQID = String.format(checkEQID,equipmentID);
+        ResultSet res = myStmt.executeQuery(checkEQID);
+        if(!res.next()){myStmt.close();throw new SQLException("A record with the given equipmentID could not be found!");}
+
+        // Now actually update the equipment type and record the change in the log.
+        String updateType = "update tylergarfield.Equipment set equip_type='%s' where equipmentID=%d";
+        updateType = String.format(updateType,newType,equipmentID);
+        int numRowsAffected = myStmt.executeUpdate(updateType);
+
+         // If the entry was successfully updated add the update to the log.
+        int equipmentArchiveID = 0;
+        if(numRowsAffected > 0 ) {
+            equipmentArchiveID = getNextId("Equipment_Archive","tylergarfield");
+            String addEquipmentToArchive = "insert into tylergarfield.Equipment_Archive " +
+                                        "select %d,equipmentID,equip_type,equip_size,name,1 " +
+                                        "from tylergarfield.Equipment where equipmentID=%d";
+            addEquipmentToArchive = String.format(addEquipmentToArchive,equipmentArchiveID,equipmentID);
+            myStmt.executeQuery(addEquipmentToArchive);
+        }
+
+        myStmt.close();
+        return equipmentArchiveID;
+    }
+
+    public int updateEquipmentName(int equipmentID,String equipName) throws SQLException{
+         Statement myStmt = dbconn.createStatement();
+
+        // First verify that the equipment that is attempting to be added actually exists.
+        String checkEQID = "select 1 from tylergarfield.Equipment where equipmentID=%d";
+        checkEQID = String.format(checkEQID,equipmentID);
+        ResultSet res = myStmt.executeQuery(checkEQID);
+        if(!res.next()){myStmt.close();throw new SQLException("A record with the given equipmentID could not be found!");}
+
+        // Now actually update the equipment type and record the change in the log.
+        String updateName = "update tylergarfield.Equipment set name='%s' where equipmentID=%d";
+        updateName = String.format(updateName,equipName,equipmentID);
+        int numRowsAffected = myStmt.executeUpdate(updateName);
+
+         // If the entry was successfully updated add the update to the log.
+        int equipmentArchiveID = 0;
+        if(numRowsAffected > 0 ) {
+            equipmentArchiveID = getNextId("Equipment_Archive","tylergarfield");
+            String addEquipmentToArchive = "insert into tylergarfield.Equipment_Archive " +
+                                        "select %d,equipmentID,equip_type,equip_size,name,1 " +
+                                        "from tylergarfield.Equipment where equipmentID=%d";
+            addEquipmentToArchive = String.format(addEquipmentToArchive,equipmentArchiveID,equipmentID);
+            myStmt.executeQuery(addEquipmentToArchive);
+        }
+
+        myStmt.close();
+        return equipmentArchiveID;
+    }
+
+    public int updateEquipmentSize(int equipmentID, double newSize) throws SQLException,IllegalArgumentException{
+        Statement myStmt = dbconn.createStatement();
+
+        // First verify that the equipment that is attempting to be added actually exists.
+        String checkEQID = "select equip_type from tylergarfield.Equipment where equipmentID=%d";
+        checkEQID = String.format(checkEQID,equipmentID);
+        ResultSet res = myStmt.executeQuery(checkEQID);
+	String equipType = "";
+        if(!res.next()){myStmt.close();throw new SQLException("A record with the given equipmentID could not be found!");}
+        else{equipType = res.getString("equip_type");}
+
+        // Now check if the given size is valid for the given equipment type. Caller needs to verify that the
+        // number given is either x.0 or x.5 for boots or x.0 for any other gear type. Rental gear will just have.
+        // TODO you were here ACTUALLY FILL IN THESE CHECKS.
+        if(equipType.equals("boot") && (newSize < 4.0 || newSize > 14.0)) {
+            myStmt.close();
+            throw new IllegalStateException("Given boot for equipment update but size was not within valid range!");
+        } else if(equipType.equals("pole") && (newSize < 100.0 || newSize > 140.0)){
+            myStmt.close();
+            throw new IllegalStateException("Given pole for equipment update but size was not within valid range!");
+        } else if(equipType.equals("alpine ski") && (newSize < 115.0 || newSize > 200.0)){
+            myStmt.close();
+            throw new IllegalStateException("Given alpine ski for equipment update but size was not within valid range!");
+        } else if(equipType.equals("snowboard") && (newSize < 90.0 || newSize > 178.0)){
+             myStmt.close();
+             throw new IllegalStateException("Given snowboard ski for equipment update but size was not within valid range!");
+        } else if(equipType.equals("helmet") || equipType.equals("goggle") || equipType.equals("glove")) {
+            if(newSize < 1.0 || newSize > 3.0) {
+                myStmt.close();
+                throw new IllegalStateException("Given "+equipType +" for equipment update but size was not within valid range!");
+            }
+        }
+
+        int numRowsAffected = 0;
+
+        // Now actually update the equipment type and record the change in the log.
+        String updateSize = "update tylergarfield.Equipment set equip_size=%f where equipmentID=%d";
+        updateSize = String.format(updateSize,newSize,equipmentID);
+        numRowsAffected = myStmt.executeUpdate(updateSize);
+         // If the entry was successfully updated add the update to the log.
+        int equipmentArchiveID = 0;
+        if(numRowsAffected > 0 ) {
+            equipmentArchiveID = getNextId("Equipment_Archive","tylergarfield");
+            String addEquipmentToArchive = "insert into tylergarfield.Equipment_Archive " +
+                                        "select %d,equipmentID,equip_type,equip_size,name,1 " +
+                                        "from tylergarfield.Equipment where equipmentID=%d";
+            addEquipmentToArchive = String.format(addEquipmentToArchive,equipmentArchiveID,equipmentID);
+            myStmt.executeQuery(addEquipmentToArchive);
+        }
+
+        myStmt.close();
+        return equipmentArchiveID;
+    }
+
 }
+
